
CONFIGS
	Added php5-json package ( Debian Jessie )
	Moved: Local DNS resolver parameters from the imscp.conf file to the bind.data configuration file

DISTRO
	Changed: Dovecot packages are now installed from backports repository ( Squeeze, Wheezy )

ENGINE
	Added: Checks for a2enconf/a2disconf command availability
	Added: -h ( help ) short option  ( iMSCP::Getopt module )
	Moved: Local DNS resolver question into bind9 installer
	Removed: imscp-local-dns-resolver script (  The bind9 initscript invokes resolvconf itself )
	Fixed: Useless instantiation of servers

FRONTEND
	Added: Support for eAccelerator, WinCache, XCache and ZendOptimizerPlus opcode caches

INSTALLER
	Fixed: Migration from Courier to Dovecot is broken ( courier-dovecot-migrate.pl is run with a wrong option )
	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )
	Fixed: rsync: failed to set times on "/var/www/virtual": Operation not permitted (1)
	Fixed: Unable to define custom APT repository without key ( Debian, Ubuntu )
	Removed: 'resolver' configuration item ( local DNS resolver question is part of 'named' configuration item )

PLUGINS
	Fixed: Plugins that don't implement an API method which is being executed must not be instantiated

TICKETS
	Fixed #1205: Good practices - Use "-h" as abbrev for "--help" (instead of "-?")
	Fixed #1206: Good practices - Install resolvconf only when bind9 is also installed
	Fixed #1207: Defect - DataTable - Sorting not functional for data strings containing numeric values
	Fixed #1208: Task - Untranslatable string
	Fixed #1209: Cosmetics - Data usage bar glitches on 4k screens

------------------------------------------------------------------------------------------------------------------------
1.2.0
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.2.0

DAEMON